# better-discord-webhooks

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
better_discord_webhooks/: diff.py  main.py
better_discord_webhooks/github/: issues.py
better_github_webhooks/: main.py  webhook.py
better_github_webhooks/github/: issues.py  push.py  star.py
tests/: test_webhook_filter.py
webhook_filter/: main.py  webhook.py
